apps/devpath-gateway/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devpath-gateway
  labels:
    app: devpath-gateway
spec:
  selector:
    app: devpath-gateway
  ports:
    - port: 8080
      targetPort: 8080
